[project]
name = "hw-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.27.0",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
]

[project.optional-dependencies]
lint = [
    "fulldoc>=0.0.5",
    "mypy>=1.20.1",
    "pandas-stubs>=3.0.0.260204",
    "ruff>=0.15.11",
    "ty>=0.0.34",
    "types-openpyxl>=3.1.5.20260408",
    "vulture>=2.16",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
line-length = 120
target-version = "py314"
unsafe-fixes = true
exclude = ['temp/']

[tool.ruff.lint]
preview = true
select = [
    "ANN",   # type annotations
    "B",     # potential bugs
    "S",     # potential vulnerabilities
    "E",     # pycodestyle errors
    "I",     # sort imports
    "F",     # pyflakes errors
    "COM",   # commas
    "T2",    # print
    "DOC",   # docstring content
    "D",     # docstring
    "UP",    # update imports and code style according to python version
    "Q",     # quotes
    "C9",    # complexity
    "C4",    # comprehensions
    "RUF",   # ruff special codes
    "PTH",   # use pathlib
    "ASYNC", # async functions
    "N",     # naming convention
    "PT",    # pytest-s
]
fixable = ["ALL"]
ignore = [
    "D413", # blank line after last docstring section
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # allow using assert-s
    "S106", # allow hardcode passwords (test values)
]


[tool.mypy]
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_decorators = true
enable_error_code = ['deprecated']
exclude = ['temp/']

[tool.ty.environment]
python = "./.venv"

[tool.ty.src]
exclude = ['temp/']


[tool.pytest]
testpaths = ["tests/"]
python_files = ["test_*.py"]
